yc/namespace/drone/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: drone
spec:
  selector:
    app: server
  ports:
  - name: main
    port: 80
    targetPort: main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: drone
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: drone/drone:2.15.0@sha256:d3e29fa1e058d5ea81b05e17b62cde5eca190710a9f0afd21568901f9102a00b
          ports:
            - name: main
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "50M"
              cpu: "5m"
            limits:
              memory: "100M"
              cpu: "5m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: server-data
