yc/namespace/drone/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone
  namespace: drone
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - drone.littlebit.space
      secretName: letsencrypt
  rules:
    - host: drone.littlebit.space
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: server
              port:
                number: 80
